# create-flask-skeleton

./: .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.py
create_flask_skeleton/: __init__.py
create_flask_skeleton/template/: .flake8  .flaskenv  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
create_flask_skeleton/template/app/: api.py  app.py  auth.py  consts.py  cors.py  db.py  factory.py  globals.py  main.py  models.py
create_flask_skeleton/template/app/apps/: admin.py  user.py
create_flask_skeleton/template/app/blueprints/: admin.py  user.py
create_flask_skeleton/template/tests/: test_app.py
