[tool.poetry]
name = "create-flask-skeleton"
version = "0.1.0"
description = ""
authors = ["Ryan Wang <hwwangwang@gmail.com>"]
include = ["create_flask_skeletion/templates"]


[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^3.13"
jinja2 = "^2.10"
click = "^7.0"

[tool.poetry.dev-dependencies]
flask = "^1.0"
pyjwt = "^1.7"
flask_sqlalchemy = "^2.3"
flask_migrate = "^2.3"
mypy_extensions = "^0.4.1"
python-dotenv = "^0.10.1"
ipython = "^7.2"
pyyaml = "^3.13"
pytest = "^4.2"
voluptuous = "^0.11.5"

[tool.poetry.scripts]
create-flask-skeleton = 'create_flask_skeleton:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

