[tool.poetry]
name = "create-flask-skeleton"
version = "0.1.1"
description = ""
authors = ["Ryan Wang <hwwangwang@gmail.com>"]
include = ["create_flask_skeletion/templates"]


[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^3.13"
jinja2 = "^2.10"
click = "^7.0"

[tool.poetry.dev-dependencies]
pyjwt = "^1.7"
flask_sqlalchemy = "^2.3"
flask_migrate = "^2.3"
python-dotenv = "^0.10.1"
ipython = "^7.2"
pyyaml = "^3.13"
flask = "^1.1.1"
pytest = "^5.3.2"
voluptuous = "^0.11.7"
black = "^19.10b0"
mypy = "^0.761"

[tool.poetry.scripts]
create-flask-skeleton = 'create_flask_skeleton:main'

[tool.black]
target-version = ['py37', 'py38']
exclude = '''
/(
  create_flask_skeleton/template
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

