[tool.poetry]
name = "{{ app }}"
version = "0.1.0"
description = ""
authors = ["Ryan Wang <hwwangwang@gmail.com>"]
include = ["{{ app }}/templates/", "{{ app }}/static/"]


[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
pyjwt = "^1.7"
flask_sqlalchemy = "^2.3"
flask_migrate = "^2.3"
python-dotenv = "^0.10.1"
ipython = "^7.2"
pyyaml = "^5.2"
voluptuous = "^0.11.7"


[tool.poetry.dev-dependencies]
mypy_extensions = "^0.4.3"
pytest = "^5.3.2"
flake8 = "^3.7"
fabric = "^2.4"
sqlalchemy-stubs = "^0.3.0"
black = "^19.10b0"
mypy = "^0.761"


[tool.black]
target-version = ['py37', 'py38']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


